# RayTracingEngine

./: .gitignore  CMakeLists.txt  README.md  RayTraceCore.pc.in
.github/workflows/: cmake.yml
API/: BasicStructures.h  ControlShader.h  HitShader.h  MissShader.h  Object.h  OcclusionShader.h  PierceShader.h  Pipeline.h  RayEngine.h  RayGeneratorShader.h  RayTraceCore.h  Shader.h  TriangleMeshObject.h
Examples/MinimalExample/: CMakeLists.txt  OBJ_Loader.h  README.md  main.cpp  post_build.sh
Examples/MinimalExample/Stb/: stb_image.h
Examples/MinimalExample/Stb/tests/: tilemap_editor_integration_example.c
Examples/MinimalExample/cmake_modules/: FindSFML.cmake
include/: HitShader.h  Shader.h
include/API/: PierceShader.h  TriangleMeshObject.h
include/RayTraceEngine/: BasicStructures.h  HitShader.h  Intersectable.h  Matrix4x4.h  MissShader.h  Object.h  OcclusionShader.h  PierceShader.h  Pipeline.h  RayEngine.h  RayGeneratorShader.h  Shader.h  TriangleMeshObject.h  Utility.h  Vector3D.h
src/: CMakeLists.txt  RayEngine.cpp  RayTraceEngine.pc.in
src/Acceleration Structures/: DBVH.cpp  DBVH.h  DBVHv2.cpp  DBVHv2.h  HBVH.cpp
src/Data Management/: DataManagementUnit.cpp  DataManagementUnit.h  DataManagementUnitV2.cpp  DataManagementUnitV2.h
src/Data Management Unit/: DataManagementUnit.cpp
src/Data Management Unit/HBVH/: HBVH.h  SceneData.cpp  SceneData.h
src/Data Management/HBVH/: HBVH.cpp  Scene.h
src/Engine Node/: EngineNode.cpp  EngineNode.h
src/Object/: Instance.cpp  Instance.h  Object.cpp  TriangleMeshObject.cpp
src/Pipeline/: Pipeline.cpp  PipelineImplement.cpp  PipelineImplement.h
src/Pipeline/Shader/: Data.h
src/Utility/: Id.h
src/Utils/Allocator/: AlignedAllocator.h
src/Utils/ConcurrentQueue/: taskStealingQueueV2.h
src/Utils/HashMap/: RobinMap.h  robin_hash.h  robin_map.h
src/bvh/: DBVH.cpp  DBVH.h  DBVHNode.cpp  DBVHNode.h  DBVHv2.cpp  DBVHv2.h  HBVH.cpp  HBVH.h
src/cache/: Cache.cpp  Cache.h
src/data_management/: DataManagementUnit.cpp  DataManagementUnit.h  DataManagementUnitV2.cpp  DataManagementUnitV2.h
src/engine_node/: EngineNode.cpp  EngineNode.h  EngineNode.tpp
src/flat_tree/: FlatTree.cpp  FlatTree.h
src/intersectable/: Instance.cpp  Instance.h  TriangleMeshObject.cpp
src/pipeline/: PipelineImplement.cpp  PipelineImplement.h  PipelinePool.cpp  PipelinePool.h
src/utility/: Id.h  IdContainer.h
